# sbo

./: .beans.yml  .gitignore  Cargo.toml  README.md  SBO Bridge Specification v0.1.md  SBO Bridge Specification v0.2.md  SBO Genesis Specification v0.1.md  SBO Identity Specification v0.1.md  SBO NFT Schema v1.md  SBO Name Resolution Specification v0.1.md  SBO Policy Specification v0.1.md  SBO Policy Specification v0.2.md  SBO Spec v0.3.md  SBO Specification v0.4.md  SBO State Commitment Specification v0.1.md  SBO URI Spec v0.2.md  SBO URI Specification v0.2.md  SBO URI Specification v0.3.md  SBO Wire Format Specification v0.1.md
.beads/: SBO.db
.beans/: sbo-0web--docs-spec-drift-reconciliation-from-review.md  sbo-2tue--object-hash-computed-over-re-serialized-bytes-not.md  sbo-3gqo--domain-self-cert-failure-is-warn-only-spec-says-mu.md  sbo-49su--agent-native-web-of-trust-for-dependency-audits-si.md  sbo-4arq--bare-key-is-not-a-valid-identity-reject-raw-key-ow.md  sbo-4tka--by-qualified-attested-lookup-blind-to-u-namespace.md  sbo-5rww--zkvm-guest-verifies-no-sbo-validity-state-transiti.md  sbo-723r--p2-policy-version-pinning-content-hash-bounded-pol.md  sbo-7bl8--da-inclusion-fully-trusted-from-rpc-no-reorg-handl.md  sbo-8t4b--warrant-authorized-on-chain-writes-sbo-audiences.md  (+22 more)
crates/sbo-capture/: Cargo.toml
crates/sbo-capture/src/: lib.rs
crates/sbo-cli/: Cargo.toml
crates/sbo-cli/examples/: agent_write_smoke.rs  dnssec_hlc.rs
crates/sbo-cli/src/: main.rs
crates/sbo-cli/src/commands/: domain.rs  identity.rs
crates/sbo-core/: Cargo.toml
crates/sbo-core/examples/: build_policy_wire.rs  roundtrip_policy.rs
crates/sbo-core/src/: attribution.rs  authorize.rs  device_attribution.rs  dns.rs  genesis.rs  indexer.rs  jwt.rs  keyring.rs  lib.rs  presets.rs  resolve.rs  uri.rs
crates/sbo-core/src/device_attribution/: tests.rs
crates/sbo-core/src/message/: envelope.rs  mod.rs  validate.rs
crates/sbo-core/src/policy/: delegation.rs  evaluate.rs  mod.rs  path.rs  types.rs
crates/sbo-core/src/proof/: sbop.rs  sboq.rs
crates/sbo-core/src/schema/: attestation.rs  mod.rs
crates/sbo-core/src/state/: db.rs  mod.rs  objects.rs
crates/sbo-core/src/wire/: mod.rs  parser.rs  serializer.rs
crates/sbo-core/tests/: agent_write.rs  preset_test.rs  signature_test.rs  state_test.rs  wire_parser_test.rs
crates/sbo-crypto/: Cargo.toml
crates/sbo-crypto/src/: ed25519.rs  hash.rs  kzg_tests.rs  lib.rs
crates/sbo-rpc/: Cargo.toml
crates/sbo-rpc/src/: decode.rs
reference_impl/: .gitignore  Cargo.toml  README.md  SBO Daemon Spec v0.1.md  danmills-proof.sboq  indexer.js  package-lock.json  package.json
reference_impl/docs/: avail-data-matrix.md  daemon-debugging.md  srs-generation.md
reference_impl/docs/notes/: auth-spec-comparison.md
reference_impl/docs/plans/: 2024-12-19-identity-spec-refactor.md  2024-12-19-jwt-identity-implementation.md  2024-12-20-zkvm-da-verification.md  2024-12-22-web-auth-demo-design.md  2025-12-22-auth-spec-compliance.md  2025-12-22-identity-provisioning-design.md
reference_impl/docs/tmp-notes/: avail-matrix-encoding.txt  identity-rework-notes.txt
reference_impl/mingo-idp/: Cargo.toml  README.md
reference_impl/mingo-idp/src/: config.rs  error.rs  main.rs  routes.rs  store.rs  verify.rs
reference_impl/mingo-idp/static/: auth.html  auth.js  authentication_api.js  provision.html  provision.js  provisioning_api.js
reference_impl/mingo-web/: README.md  app.js  index.html  style.css
reference_impl/sbo-auth-demo/: Cargo.toml
reference_impl/sbo-auth-demo/src/: main.rs
reference_impl/sbo-avail/: Cargo.toml
reference_impl/sbo-avail/src/: blocks.rs  client.rs  lib.rs
reference_impl/sbo-capture/: Cargo.toml
reference_impl/sbo-capture/src/: lib.rs
reference_impl/sbo-cli/: Cargo.toml
reference_impl/sbo-cli/src/: main.rs
reference_impl/sbo-cli/src/commands/: auth.rs  da.rs  domain.rs  identity.rs  mod.rs
reference_impl/sbo-core/: Cargo.toml
reference_impl/sbo-core/src/: attribution.rs  authorize.rs  dns.rs  error.rs  hlc.rs  jwt.rs  lib.rs  presets.rs
reference_impl/sbo-core/src/crypto/: hash.rs  mod.rs
reference_impl/sbo-core/src/message/: actions.rs  envelope.rs  validate.rs
reference_impl/sbo-core/src/policy/: evaluate.rs  mod.rs  types.rs
reference_impl/sbo-core/src/proof/: mod.rs  sbop.rs  sboq.rs
reference_impl/sbo-core/src/schema/: community.rs  content.rs  identity.rs  mod.rs
reference_impl/sbo-core/src/state/: db.rs  mod.rs  objects.rs
reference_impl/sbo-core/src/wire/: headers.rs  parser.rs  serializer.rs
reference_impl/sbo-core/tests/: signature_test.rs  state_test.rs  wire_parser_test.rs
reference_impl/sbo-crypto/: Cargo.toml
reference_impl/sbo-crypto/src/: error.rs  kzg.rs  lib.rs  merkle.rs  merkle_tests.rs  poly.rs  poly_zkvm.rs  srs.rs  srs_data.rs
reference_impl/sbo-daemon/: Cargo.toml
reference_impl/sbo-daemon/src/: config.rs  http.rs  ipc.rs  lc.rs  lib.rs  main.rs  pending.rs  repo.rs  rpc.rs  sync.rs  turbo.rs  validate.rs
reference_impl/sbo-daemon/tests/: l2_authorization.rs
reference_impl/sbo-rpc/src/: error.rs
reference_impl/sbo-types/: Cargo.toml
reference_impl/sbo-types/src/: action.rs  id.rs
reference_impl/sbo-wasm/: build-web.sh
reference_impl/sbo-wasm/examples/: typed-signing-smoke-test.html
reference_impl/sbo-wasm/src/: lib.rs
reference_impl/sbo-zkvm/: Cargo.toml
reference_impl/sbo-zkvm/methods/guest/: Cargo.toml
reference_impl/sbo-zkvm/methods/guest/src/: main.rs
reference_impl/sbo-zkvm/src/: lib.rs  prover.rs  types.rs
sbo-avail/: Cargo.toml
sbo-avail/src/: submit.rs
sbo-cli/: Cargo.toml
sbo-cli/src/: main.rs
sbo-cli/src/commands/: auth.rs  da.rs  domain.rs  identity.rs  mod.rs  session.rs
sbo-crypto/: Cargo.toml
sbo-crypto/src/: bls.rs  hash.rs  lib.rs  merkle.rs  poly.rs  trie.rs
sbo-types/: Cargo.toml
sbo-types/src/: id.rs  lib.rs  path.rs
sbo-wasm/: Cargo.toml
sbo-wasm/examples/: typed-signing-smoke-test.html
sbo-wasm/src/: lib.rs
sbo-zkvm/methods/guest/: Cargo.toml
sbo-zkvm/methods/guest/src/: main.rs
(+145 files in other folders)
