[workspace]
resolver = "2"
members = ["crates/*", "crates/sbo-zkvm/methods"]

# `default-members` is what a bare `cargo build`/`cargo test` (no `-p`) operates
# on. It excludes the RISC Zero crates (`sbo-zkvm` and its `methods` guest),
# whose build script requires the risc0 Rust toolchain (`rzup install rust`) and
# the macOS `metal` SDK — neither of which is needed for the daemon, CLI, or
# core. Build the zkvm crates explicitly when you have the toolchain, e.g.
# `cargo build -p sbo-zkvm`.
default-members = [
    "crates/sbo-avail",
    "crates/sbo-capture",
    "crates/sbo-cli",
    "crates/sbo-core",
    "crates/sbo-crypto",
    "crates/sbo-daemon",
    "crates/sbo-rpc",
    "crates/sbo-types",
    "crates/sbo-wasm",
]

# Incremental release builds. Cargo only ever compiles *workspace* crates
# incrementally (never registry deps), so this is cache-safe: it does NOT change
# the fingerprint of rocksdb et al., and combined with a deploy's persisted
# BuildKit target/ cache mount it makes redeploys recompile only the changed
# codegen units of our own crates. opt-level is left at the release default (3)
# on purpose — lowering it WOULD rebuild every dep.
[profile.release]
incremental = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vthunder/sbo"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Storage
rocksdb = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
base64 = "0.22"

# Compression
flate2 = "1.0"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
sbo-core = { path = "crates/sbo-core" }
sbo-capture = { path = "crates/sbo-capture" }
sbo-crypto = { path = "crates/sbo-crypto" }
sbo-avail = { path = "crates/sbo-avail" }
sbo-daemon = { path = "crates/sbo-daemon" }
sbo-rpc = { path = "crates/sbo-rpc" }
