[package]
name = "sbo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO command-line interface"

[[bin]]
name = "sbo"
path = "src/main.rs"

[dependencies]
sbo-core.workspace = true
sbo-crypto.workspace = true
sbo-avail.workspace = true
sbo-daemon.workspace = true
sbo-rpc.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
parity-scale-codec = "3"
avail-rust = { package = "avail-rust-client", git = "https://github.com/availproject/avail-rust", branch = "main" }
ed25519-dalek.workspace = true
rand.workspace = true
dirs = "5"
open = "5"
