[package]
name = "sbo-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO core types (no_std compatible)"

[features]
default = ["std"]
std = ["alloc", "serde?/std"]
alloc = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
serde_json = "1"
