[package]
name = "sbo-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client-side capture of browserid certificates + DNSSEC evidence (SBO Auth-Cert / Auth-Evidence)"

[dependencies]
sbo-core.workspace = true
# DEV: temporary path dep (see sbo-core/Cargo.toml). REVERT to a pushed git rev
# once browserid-ng main is pushed.
browserid-core = { git = "https://github.com/vthunder/browserid-ng", rev = "2582555" }
dnssec-prover = { version = "0.6.8", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
