[package]
name = "sbo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO core library - wire format, crypto, policy, state"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
rocksdb = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sbo-types = { path = "../sbo-types", features = ["serde"] }
sbo-crypto = { path = "../sbo-crypto" }
base64 = "0.22"
dirs = "5"
hickory-resolver = "0.24"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# DEV: temporary path dep — the device-cert model lives only on browserid-ng
# LOCAL main (unpushed). REVERT to a pushed git rev once main is pushed:
#   browserid-core = { git = "https://github.com/vthunder/browserid-ng", rev = "<sha>" }
browserid-core = { git = "https://github.com/vthunder/browserid-ng", rev = "b8526f6" }
dnssec-prover = "0.6.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
chrono = "0.4.45"

[features]
# `storage` (default-on) is the RocksDB-backed state DB + indexer. Pure consumers
# that only build/verify objects (e.g. mingo-idp's server-side signer) turn it
# off with `default-features = false` to avoid the rocksdb → bindgen → libclang
# build chain.
default = ["storage"]
storage = ["dep:rocksdb"]
bls = ["sbo-crypto/bls"]
