[package]
name = "sbo-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO cryptographic operations (no_std compatible)"

[features]
default = ["std", "ed25519", "bls"]
std = ["alloc", "sha2/std", "ed25519-dalek?/std", "serde?/std"]
alloc = []
ed25519 = ["dep:ed25519-dalek"]
bls = ["dep:blst"]
kzg = ["dep:blst"]
# Use RISC Zero accelerated crypto when running inside zkVM
# Includes bls12_381 for KZG verification (use with kzg feature)
zkvm = ["dep:risc0-zkvm", "dep:bls12_381", "dep:ff"]
# Enable serde serialization for witness types
serde = ["dep:serde"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"], optional = true }
blst = { version = "0.3", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, optional = true }
# BLS12-381 for zkVM (uses RISC Zero accelerated version via patch in guest)
bls12_381 = { version = "0.8", default-features = false, features = ["groups", "alloc"], optional = true }
# ff trait for PrimeField (used by bls12_381)
ff = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8"
