[package]
name = "sbo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO core library - wire format, crypto, policy, state"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
