[package]
name = "sbo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO core library - wire format, crypto, policy, state"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sbo-types = { path = "../sbo-types", features = ["serde"] }
sbo-crypto = { path = "../sbo-crypto" }
base64 = "0.22"
dirs = "5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"

[features]
default = []
bls = ["sbo-crypto/bls"]
