[package]
name = "sbo-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO cryptographic operations (no_std compatible)"

[features]
default = ["std", "ed25519", "bls"]
std = ["alloc", "sha2/std", "ed25519-dalek?/std"]
alloc = []
ed25519 = ["dep:ed25519-dalek"]
bls = ["dep:blst"]
kzg = ["dep:blst"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"], optional = true }
blst = { version = "0.3", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8"
