[package]
name = "sbo-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SBO daemon for repo sync and data availability verification"

[[bin]]
name = "sbo-daemon"
path = "src/main.rs"

[features]
default = []
zkvm = ["sbo-zkvm"]

[dependencies]
sbo-core.workspace = true
sbo-rpc.workspace = true
sbo-zkvm = { path = "../sbo-zkvm", features = ["prove"], optional = true }
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
hex.workspace = true
sha2.workspace = true
flate2.workspace = true

# Avail SDK for RPC queries
avail-rust = { package = "avail-rust-client", git = "https://github.com/availproject/avail-rust", branch = "main" }

# SCALE codec for proper extrinsic decoding
parity-scale-codec = "3"

# Config
toml = "0.8"

# IPC
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP server
axum.workspace = true
tower-http.workspace = true
rand.workspace = true

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# File watching (for config changes)
notify = "7"

# Directories
dirs = "5"

# CLI/Logging for binary
clap.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
