[package]
name = "sbo-zkvm-guest"
version = "0.1.0"
edition = "2021"

[workspace]

# Guest ID Injection for Recursive Verification
# =============================================
# This guest needs its own image ID (SBO_ZKVM_GUEST_ID) to verify recursive proofs
# via env::verify(). However, this creates a circular dependency:
#   - Guest needs the ID to build
#   - ID is only available after guest is built
#
# Current solution: Use placeholder (all zeros) in guest code (see main.rs)
# When running with RISC0_DEV_MODE=1, verification is skipped anyway.
#
# Future options for production:
#   1. Two-stage build: build once, extract ID, rebuild with ID embedded
#   2. Generated include file: methods build.rs writes ID to a file, guest includes it
#   3. Build-time injection: Pass ID via environment variable to guest build
#
# Note: Adding sbo-zkvm-methods as a dependency here creates circular dependency
# and will cause build failures. The placeholder approach is sufficient.

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
sbo-types = { path = "../../../sbo-types", default-features = false, features = ["alloc"] }
sbo-crypto = { path = "../../../sbo-crypto", default-features = false, features = ["alloc", "ed25519", "zkvm", "serde", "kzg"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

# Note: Standard bls12_381 crate is used (no RISC Zero acceleration yet)
# The accelerated version has std compatibility issues with risc0-bigint2
# This will work but be slower - real acceleration can be added when risc0 support matures
